<resources>

    <string name="app_name">Decision Maker</string>
    <!--ca-app-pub-3940256099942544/6300978111-->
    <!--ca-app-pub-3940256099942544/1033173712-->
    <string name="main_banner" translatable="false">ca-app-pub-3036948542324685/5643130808</string>
    <string name="main_interstitial" translatable="false">ca-app-pub-3036948542324685/4330049131</string>


    <string name="ask_me_your_question_here">Ask me your question here</string>
    <string name="options">Options</string>
    <string name="option">Option</string>
    <string name="decide">Decide</string>
    <string name="enter_your_option_here">Enter your option here</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="please_enter_an_option">Please enter an option</string>
    <string name="please_enter_at_least_2_options">Please enter at least 2 options</string>
    <string name="deciding">Deciding…</string>
    <string name="i_think_you_should_go_with">I think you should go with</string>
    <string name="try_again">Try again</string>

</resources>
