<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="mainViewModel"
            type="com.martiandeveloper.decisionmaker.viewmodel.MainViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/moorland_mist"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dialog_option_optionET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/woodland"
            app:boxStrokeColor="@color/woodland"
            app:hintAnimationEnabled="false"
            app:hintTextColor="@color/woodland">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background"
                android:fontFamily="@font/actor"
                android:hint="@string/enter_your_option_here"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:text="@={mainViewModel.optionET}"
                android:textColor="@color/apple_white"
                android:textColorHint="@color/woodland" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/antarctic_deep"
                android:fontFamily="@font/actor"
                android:onClick="@{() -> mainViewModel.onCancelMBTNClick()}"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/apple_white"
                app:cornerRadius="0dp"
                app:icon="@drawable/ic_cancel"
                app:iconTint="@color/moorland_mist"
                app:strokeColor="@color/woodland"
                app:strokeWidth="1dp" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/antarctic_deep"
                android:fontFamily="@font/actor"
                android:onClick="@{()->mainViewModel.onDoneMBTNClick()}"
                android:text="@string/done"
                android:textAllCaps="false"
                android:textColor="@color/apple_white"
                app:cornerRadius="0dp"
                app:icon="@drawable/ic_done"
                app:iconTint="@color/moorland_mist"
                app:strokeColor="@color/woodland"
                app:strokeWidth="1dp" />

        </LinearLayout>

    </LinearLayout>

</layout>
